Fix incoming container clipping

--- a/x1-x.css
+++ b/x1-x.css
@@ -44,7 +44,7 @@ body > div {
 	border: 2px solid #050505;
 	padding: 5px;
 	margin: 8px;
-	width: 94%;
+	width: auto;
 	box-shadow: 2px 2px 5px #141414;
 	border-radius: 2px;
 }
